--- a/day3.css
+++ b/day3.css
@@ -27,8 +27,7 @@ h1 {
   padding: 0 0.5rem;
   text-align: center;
   font-size: 1rem;
-  /* change to 10 */
-  z-index: 10;
+  z-index: 9999;
   line-height: 1.4rem;
 }
 .player {
@@ -61,131 +60,86 @@ h1 {
 }
 .tabtitle + .player b {
   padding-top: 0.7rem;
-  /* change none */
-  /* height: calc(100% - 0.7rem); */
+  height: calc(100% - 0.7rem);
 }
 .diceroll {
   padding: 0 0.5em;
   color: #ffffff;
 }
 
-/* [雑談] タブ */
-.t0 {
-  background-color: #cccccc;
-  border-color: #999999;
-  color: #000000;
-  font-size: 0.8rem;
-}
-
 /* [メイン] タブ */
-.t1 {
+.t0 {
   background-color: #ffffff;
   border-color: #999999;
   color: #000000;
 }
 
 /* [秘匿(みすみ,卍)] タブ */
-.t2 {
+.t1 {
   background-color: #fadce9;
   border-color: #999999;
   color: #000000;
 }
 
 /* [秘匿(卍,麺面@E..)] タブ */
-.t3 {
+.t2 {
   background-color: #d3def1;
   border-color: #999999;
   color: #000000;
 }
 
-/* [情報] タブ */
-.t4 {
-  background-color: #ffffff;
-  border-color: #999999;
-  color: #000000;
-}
-
 /* 発言者：   */
-.p1 {
+.p0 {
   color: #888888;
 }
-
-/* 発言者：万智 心詞 */
-.p2 {
-  color: #ff9800;
+.p0 .diceroll {
+  background-color: #888888;
 }
 
 /* 発言者：桐生さつき */
-.p3 {
+.p1 {
   color: #ff5722;
 }
-
-/* 発言者：揣摩 */
-.p4 {
-  color: #888888;
+.p1 .diceroll {
+  background-color: #ff5722;
 }
 
-/* 発言者：  ウェイトレス */
-.p6 {
+/* 発言者：noname */
+.p2 {
   color: #888888;
 }
-
-/* 発言者：三木の母 */
-.p7 {
-  color: #888888;
+.p2 .diceroll {
+  background-color: #888888;
 }
 
-/* 発言者：三木 */
-.p8 {
-  color: #888888;
+/* 発言者：万智 心詞 */
+.p3 {
+  color: #ff9800;
+}
+.p3 .diceroll {
+  background-color: #ff9800;
 }
 
 /* 発言者：system */
-.p9 {
+.p4 {
   color: #888888;
 }
-
-/* 発言者：刑事 */
-.p10 {
-  color: #888888;
-}
-
-/* 発言者：〇慈善支援団体エル */
-.p11 {
-  color: #888888;
-}
-
-/* 発言者：  ホームレス */
-.p12 {
-  color: #888888;
-}
-
-/* 発言者：男性 */
-.p13 {
-  color: #888888;
+.p4 .diceroll {
+  background-color: #888888;
 }
 
 /* 発言者：田代 */
-.p14 {
+.p5 {
   color: #888888;
 }
-
-/* 発言者：女性 */
-.p15 {
-  color: #888888;
+.p5 .diceroll {
+  background-color: #888888;
 }
 
 /* 発言者：目坂 */
-.p16 {
+.p6 {
   color: #888888;
 }
-
-/* 発言者：職員 */
-.p17 {
-  color: #888888;
-}
-
-/* 発言者：〇『共啼きに関して』 */
-.p18 {
-  color: #888888;
+.p6 .diceroll {
+  background-color: #888888;
 }
