--- a/style.css
+++ b/style.css
@@ -44,7 +44,37 @@ nav .dropdown-menu.show {
   opacity: 1;
 }
 
-body {
-  padding-top: 60px;
+button:focus {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+  outline: dotted 1px;
+}
+
+main {
+  width: 80%;
+  max-width: 780px;
+  position: relative;
+  padding: 50px 0;
+  margin: 0 auto;
+}
+
+.tabtitle + .player b {
+  height: 100% !important;
+}
+
+.tabtitle {
+  z-index: 10 !important;
+}
+
+@media screen and (max-width: 580px) {
+  main {
+    width: auto !important;
+  }
+  .player {
+    padding-left: 5.5rem;
+  }
+  .player b {
+    width: 5rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
