--- a/style.scss
+++ b/style.scss
@@ -63,6 +63,34 @@ nav {
   }
 }
 
-body {
-  padding-top: 60px;
+button:focus {
+  box-shadow: none !important;
+  outline: dotted 1px;
+}
+
+main {
+  width: 80%;
+  max-width: 780px;
+  position: relative;
+  padding: 50px 0;
+  margin: 0 auto;
+}
+
+.tabtitle + .player b {
+  height: 100% !important;
+}
+.tabtitle {
+  z-index: 10 !important;
+}
+
+@media screen and (max-width: 580px) {
+  main {
+    width: auto !important;
+  }
+  .player {
+    padding-left: 5.5rem;
+  }
+  .player b {
+    width: 5rem;
+  }
 }
